--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>Andrés Mejía</title>
 </head>
 <body>
+
+    <!--Fixed Navigation-->
     <div class="fixed">
     <header id="main-nav">
         <img src="./img/logo-white.png">
@@ -39,7 +41,7 @@
     <hr class="nav-divider">
 </div>
 
-
+<!--First Section-->
     <section class="f-banner">
         <article class="art-1">
         <h1 class="title">Andrés Mejía</h1>
@@ -54,8 +56,9 @@
 
 
 
-
-
+<!--JQuery-->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!--Custom JavaScript-->
 <script src="./js/app.js"></script>
 </body>
 </html>
