--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 </head>
 <body>
 
-    <!--Fixed Navigation-->
-    <div class="fixed">
     <header id="main-nav">
         <img src="./img/logo-white.png">
         <nav class="navigation">
@@ -38,8 +36,6 @@
             </button>
         </nav>
     </header>
-    <hr class="nav-divider">
-</div>
 
 <!--First Section-->
     <section class="f-banner">
@@ -49,13 +45,20 @@
         <article class="art-2">
             <img src="" alt="">
         </article>
-
+    <footer>
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+        <a href=""><i class="fa-brands fa-twitter"></i></a>
+        <a href=""><i class="fa-brands fa-youtube"></i></a>
+        <a href=""><i class="fa-brands fa-spotify"></i></a>
+    </footer>
     </section>
 
 
 
 
-
+<!--Font Awesome-->
+<script src="https://kit.fontawesome.com/ded7463228.js" crossorigin="anonymous"></script>
 <!--JQuery-->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!--Custom JavaScript-->
