--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             <img src="" alt="">
         </article>
     <footer>
-        <a href="https://www.facebook.com/profile.php?id=100063614046383" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-        <a href="https://instagram.com/andresmejiamusica?utm_medium=copy_link" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://twitter.com/andresdmej?s=21&t=GtI6ZsIbxImRJOAloiizCg" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-        <a href="https://youtube.com/user/andresmejiamusic" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-        <a href="https://open.spotify.com/artist/1rpApCW15ycZSi0D9voRac?si=jqQRol-FRhaFXZfjzpAJbQ" target="_blank"><i class="fa-brands fa-spotify"></i></a>
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+        <a href=""><i class="fa-brands fa-twitter"></i></a>
+        <a href=""><i class="fa-brands fa-youtube"></i></a>
+        <a href=""><i class="fa-brands fa-spotify"></i></a>
     </footer>
     </section>
 
