--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header id="main-nav">
-        <img src="./img/logo-white.png">
+        <img src="./img/andres-logo-white.png">
         <nav class="navigation">
             <ul class="links">                
                 <li>
@@ -41,17 +41,18 @@
     <section class="f-banner">
         <article class="art-1">
         <h1 class="title">Andrés Mejía</h1>
+        <footer>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href=""><i class="fa-brands fa-spotify"></i></a>
+        </footer>
         </article>
         <article class="art-2">
-            <img src="" alt="">
+            <img src="./img/DSC_0478.png" alt="andres">
         </article>
-    <footer>
-        <a href=""><i class="fa-brands fa-facebook"></i></a>
-        <a href=""><i class="fa-brands fa-instagram"></i></a>
-        <a href=""><i class="fa-brands fa-twitter"></i></a>
-        <a href=""><i class="fa-brands fa-youtube"></i></a>
-        <a href=""><i class="fa-brands fa-spotify"></i></a>
-    </footer>
+
     </section>
 
 
