--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
         <nav class="navigation">
             <ul class="links">                
                 <li>
-                    <a href="">News</a>
-                </li>
-                <li>
                     <a href="">Tour</a>
                 </li>
                 <li>
@@ -35,22 +32,28 @@
                 <span class="br-3"></span>
             </button>
         </nav>
+
     </header>
 
 <!--First Section-->
+<h1 class="title">News</h1>
     <section class="f-banner">
+
         <article class="art-1">
-        <h1 class="title">Andrés Mejía</h1>
-        <footer>
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-twitter"></i></a>
-            <a href=""><i class="fa-brands fa-youtube"></i></a>
-            <a href=""><i class="fa-brands fa-spotify"></i></a>
-        </footer>
+            <img src="./img/Amor.jpg" alt="">
+            <p>Escucha mi nuevo sencillo!<br>
+            Disponible en todas las plataformas!
+            </p>
+            <footer>
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-youtube"></i></a>
+                <a href=""><i class="fa-brands fa-spotify"></i></a>
+            </footer>
         </article>
         <article class="art-2">
-            <img src="./img/DSC_0478.png" alt="andres">
+            <img src="./img/DSC_0478.png" alt="">
         </article>
 
     </section>
