--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ramaraja&display=swap" rel="stylesheet">
     <!--Custom CSS-->
     <link rel="stylesheet" href="./css/style.css">
     <!--Custom Reset-->
@@ -13,7 +17,7 @@
 <body>
 
     <header id="main-nav">
-        <img src="./img/andres-logo-white.png">
+        <img src="./img/andres-logo-white.png" alt="logo">
         <nav class="navigation">
             <ul class="links">                
                 <li>
@@ -40,7 +44,7 @@
     <section class="f-banner">
 
         <article class="art-1">
-            <img src="./img/Amor.jpg" alt="">
+            <img src="./img/Amor.jpg" alt="amor">
             <p>Escucha mi nuevo sencillo!<br>
             Disponible en todas las plataformas!
             </p>
@@ -53,7 +57,7 @@
             </footer>
         </article>
         <article class="art-2">
-            <img src="./img/DSC_0478.png" alt="">
+            <img src="./img/DSC_0478.png" alt="andres">
         </article>
 
     </section>
