--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </footer>
         </article>
         <article class="art-2">
-            <img src="./img/DSC_0478.png" alt="andres">
+            <img src="./img/DSC_0478-min.png" alt="andres">
         </article>
 
     </section>
