--- a/social/social.html
+++ b/social/social.html
@@ -10,19 +10,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ramaraja&display=swap" rel="stylesheet">
     <!--Custom CSS-->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!--Custom Reset-->
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="../css/reset.css">
     <title>Andrés Mejía</title>
 </head>
 <body>
-
     <header id="main-nav">
-        <img src="./img/andres-logo-white.png" alt="logo">
+        <img src="../img/andres-logo-white.png" alt="logo">
         <nav class="navigation">
             <ul class="links">                
                 <li>
-                    <a href="./social/social.html">Music</a>
+                    <a href="../index.html">News</a>
                 </li>
                 <li>
                     <a href="">Tour</a>
@@ -37,40 +36,24 @@
                 <span class="br-3"></span>
             </button>
         </nav>
-
     </header>
 
-<!--First Section-->
-<h1 class="title">News</h1>
-    <section class="f-banner">
-
-        <article class="art-1">
-            <img src="./img/Amor.jpg" alt="amor">
-            <p>Escucha mi nuevo sencillo!<br>
-            Disponible en todas las plataformas!
-            </p>
-            <footer>
-                <a href=""><i class="fa-brands fa-facebook"></i></a>
-                <a href=""><i class="fa-brands fa-instagram"></i></a>
-                <a href=""><i class="fa-brands fa-twitter"></i></a>
-                <a href=""><i class="fa-brands fa-youtube"></i></a>
-                <a href=""><i class="fa-brands fa-spotify"></i></a>
-            </footer>
-        </article>
-        <article class="art-2">
-            <img src="./img/DSC_0478-min.png" alt="andres">
-        </article>
-
+    <section class="desc">
+        <h1>Blog</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt perspiciatis minima nemo saepe sequi similique reprehenderit. Aperiam ipsam numquam, officiis iste ea porro veniam quod, cupiditate neque quisquam veritatis adipisci?
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo sit exercitationem alias officiis qui numquam, recusandae, necessitatibus minus quos culpa adipisci itaque! Corporis asperiores at aliquid ea laudantium illo velit.
+        </p>
     </section>
-
-
-
-
-<!--Font Awesome-->
+    <section class="photos">
+        <img src="" alt="p-1">
+        <img src="" alt="p-2">
+        <img src="" alt="p-3">
+    </section>
+    <!--Font Awesome-->
 <script src="https://kit.fontawesome.com/ded7463228.js" crossorigin="anonymous"></script>
 <!--JQuery-->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!--Custom JavaScript-->
-<script src="./js/app.js"></script>
+<script src="../js/app.js"></script>
 </body>
 </html>
