--- a/social/social.html
+++ b/social/social.html
@@ -45,9 +45,9 @@
         </p>
     </section>
     <section class="photos">
-        <img src="" alt="p-1">
-        <img src="" alt="p-2">
-        <img src="" alt="p-3">
+        <img src="../img/DSC_0373-min.JPG" alt="p-1">
+        <img src="../img/DSC_0439-min.JPG" alt="p-2">
+        <img src="../img/DSC_0393-min.JPG" alt="p-3">
     </section>
     <!--Font Awesome-->
 <script src="https://kit.fontawesome.com/ded7463228.js" crossorigin="anonymous"></script>
