--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <nav class="navigation">
             <ul class="links">                
                 <li>
-                    <a href="./social/social.html">Music</a>
+                    <a href="">Music</a>
                 </li>
                 <li>
                     <a href="">Tour</a>
                 </li>
                 <li>
-                    <a href="">Social</a>
+                    <a href="./social/social.html">Social</a>
                 </li>
             </ul>
             <button class="hamburger" type="button">
