--- a/social/social.html
+++ b/social/social.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <title>Andrés Mejía</title>
 </head>
-<body>
+<body class="body">
     <header id="main-nav">
         <img src="../img/andres-logo-white.png" alt="logo">
         <nav class="navigation">
@@ -24,10 +24,10 @@
                     <a href="../index.html">News</a>
                 </li>
                 <li>
-                    <a href="">Tour</a>
+                    <a href="">Music</a>
                 </li>
                 <li>
-                    <a href="">Social</a>
+                    <a href="">Tour</a> 
                 </li>
             </ul>
             <button class="hamburger" type="button">
@@ -41,7 +41,7 @@
     <section class="desc">
         <h1>Blog</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt perspiciatis minima nemo saepe sequi similique reprehenderit. Aperiam ipsam numquam, officiis iste ea porro veniam quod, cupiditate neque quisquam veritatis adipisci?
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo sit exercitationem alias officiis qui numquam, recusandae, necessitatibus minus quos culpa adipisci itaque! Corporis asperiores at aliquid ea laudantium illo velit.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
         </p>
     </section>
     <section class="photos">
