--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <nav class="navigation">
             <ul class="links">                
                 <li>
-                    <a href="">Music</a>
+                    <a href="./Music/music.html">Musica</a>
                 </li>
                 <li>
                     <a href="">Tour</a>
                 </li>
                 <li>
-                    <a href="./social/social.html">Social</a>
+                    <a href="./social/social.html">Blog</a>
                 </li>
             </ul>
             <button class="hamburger" type="button">
@@ -39,9 +39,10 @@
         </nav>
 
     </header>
-
+    <hr class="divider">
 <!--First Section-->
 <h1 class="title">News</h1>
+
     <section class="f-banner">
 
         <article class="art-1">
@@ -56,6 +57,8 @@
                 <a href=""><i class="fa-brands fa-youtube"></i></a>
                 <a href=""><i class="fa-brands fa-spotify"></i></a>
             </footer>
+            <hr class="divider">
+            <span>Andres Mejia Music &copy; -  Powered by Shibui Devs </span>
         </article>
         <article class="art-2">
             <img src="./img/DSC_0478-min.png" alt="andres">
