--- a/social/social.html
+++ b/social/social.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <title>Andrés Mejía</title>
 </head>
-<body class="body">
+<body>
     <header id="main-nav">
         <img src="../img/andres-logo-white.png" alt="logo">
         <nav class="navigation">
@@ -24,7 +24,7 @@
                     <a href="../index.html">News</a>
                 </li>
                 <li>
-                    <a href="">Music</a>
+                    <a href="../Music/music.html">Musica</a>
                 </li>
                 <li>
                     <a href="">Tour</a> 
@@ -37,7 +37,7 @@
             </button>
         </nav>
     </header>
-
+    <hr class="divider">
     <section class="desc">
         <h1>Blog</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt perspiciatis minima nemo saepe sequi similique reprehenderit. Aperiam ipsam numquam, officiis iste ea porro veniam quod, cupiditate neque quisquam veritatis adipisci?
