--- a/Music/music.html
+++ b/Music/music.html
@@ -14,11 +14,6 @@
     <!--Custom Reset-->
     <link rel="stylesheet" href="../css/reset.css">
     <title>Andrés Mejía</title>
-    <style>
-        body{
-            overflow-y: auto;
-        }
-    </style>
 </head>
 <body>
     <header id="main-nav">
@@ -68,11 +63,16 @@
         </div>
     </section>
 
+
 <!--Font Awesome-->
 <script src="https://kit.fontawesome.com/ded7463228.js" crossorigin="anonymous"></script>
 <!--JQuery-->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!--Custom JavaScript-->
 <script src="../js/app.js"></script>
+<script src="../js/overflow.js"></script>
+
+
+
 </body>
 </html>
