--- a/social/social.html
+++ b/social/social.html
@@ -55,5 +55,6 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!--Custom JavaScript-->
 <script src="../js/app.js"></script>
+<script src="../js/overflow.js"></script>
 </body>
 </html>
