--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ramaraja&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Staatliches&display=swap" rel="stylesheet">
     <!--Custom CSS-->
     <link rel="stylesheet" href="./css/style.css">
     <!--Custom Reset-->
@@ -22,7 +28,7 @@
         <nav class="navigation">
             <ul class="links">                
                 <li>
-                    <a href="./Music/music.html">Musica</a>
+                    <a href="./Music/music.html">Música</a>
                 </li>
                 <li>
                     <a href="">Tour</a>
@@ -41,7 +47,7 @@
     </header>
     <hr class="divider">
 <!--First Section-->
-<h1 class="title">News</h1>
+<h1 class="title">Lo Nuevo!</h1>
 
     <section class="f-banner">
 
@@ -58,7 +64,7 @@
                 <a href=""><i class="fa-brands fa-spotify"></i></a>
             </footer>
             <hr class="divider">
-            <span>Andres Mejia Music &copy; -  Powered by Shibui Devs </span>
+            <span>Andres Mejia Music &copy; </span><span>  Powered by Shibui Devs </span>
         </article>
         <article class="art-2">
             <img src="./img/DSC_0478-min.png" alt="andres">
