--- a/social/social.html
+++ b/social/social.html
@@ -9,6 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ramaraja&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Staatliches&display=swap" rel="stylesheet">
     <!--Custom CSS-->
     <link rel="stylesheet" href="../css/style.css">
     <!--Custom Reset-->
@@ -24,7 +30,7 @@
                     <a href="../index.html">News</a>
                 </li>
                 <li>
-                    <a href="../Music/music.html">Musica</a>
+                    <a href="../Music/music.html">Música</a>
                 </li>
                 <li>
                     <a href="">Tour</a> 
@@ -39,16 +45,26 @@
     </header>
     <hr class="divider">
     <section class="desc">
-        <h1>Blog</h1>
+        <h1>El Blog  de Andrés</h1>
+        <p>Fecha 00-00-0000</p></br>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt perspiciatis minima nemo saepe sequi similique reprehenderit. Aperiam ipsam numquam, officiis iste ea porro veniam quod, cupiditate neque quisquam veritatis adipisci?
         Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-        </p>
+        </p></section></br>
+        
     </section>
     <section class="photos">
         <img src="../img/DSC_0373-min.JPG" alt="p-1">
         <img src="../img/DSC_0439-min.JPG" alt="p-2">
         <img src="../img/DSC_0393-min.JPG" alt="p-3">
     </section>
+
+    <article>
+        <hr class="divider">
+        <div class="footer_info">
+            <p class="copy">Andres Mejia Music &copy; - All rights reserved  </p> <p> Contact: info@andresmejiamusic.com  </p> <p> Powered by Shibui Devs</p>
+        </div>
+    </article>
+
     <!--Font Awesome-->
 <script src="https://kit.fontawesome.com/ded7463228.js" crossorigin="anonymous"></script>
 <!--JQuery-->
