--- a/social/social.html
+++ b/social/social.html
@@ -53,15 +53,21 @@
         
     </section>
     <section class="photos">
-        <img src="../img/DSC_0373-min.JPG" alt="p-1">
-        <img src="../img/DSC_0439-min.JPG" alt="p-2">
-        <img src="../img/DSC_0393-min.JPG" alt="p-3">
-    </section>
+        <img src="../img/grid/grid_1-min.jpg" alt="p-1">
+        <img src="../img/grid/grid_2-min.jpg" alt="p-2">
+        <img src="../img/grid/grid_3-min.jpg" alt="p-3">
+        <img src="../img/grid/grid_4-min.jpg" alt="p-4">
+        <img src="../img/grid/grid_5-min.jpg" alt="p-5">
+        <img src="../img/grid/grid_6-min.jpg" alt="p-6">
+        <img src="../img/grid/grid_7-min.jpg" alt="p-7">
+        <img src="../img/grid/grid_8-min.jpg" alt="p-8">
+        <img src="../img/grid/grid_9-min.jpg" alt="p-9">
+    </section></br>
 
     <article>
         <hr class="divider">
         <div class="footer_info">
-            <p class="copy">Andres Mejia Music &copy; - All rights reserved  </p> <p> Contact: info@andresmejiamusic.com  </p> <p> Powered by Shibui Devs</p>
+            <p class="copy">Andres Mejia Music</p> <p> Powered by Shibui Devs</p>
         </div>
     </article>
 
