--- a/social/social.html
+++ b/social/social.html
@@ -46,10 +46,11 @@
     <hr class="divider">
     <section class="desc">
         <h1>El Blog  de Andrés</h1>
-        <p>Fecha 00-00-0000</p></br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt perspiciatis minima nemo saepe sequi similique reprehenderit. Aperiam ipsam numquam, officiis iste ea porro veniam quod, cupiditate neque quisquam veritatis adipisci?
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-        </p></section></br>
+        <p class="desc--fecha">17-03-2022</p></br>
+        <p>Les presento mi nueva canción!</p></br>
+        <p>Lo que quiero transmitir es el anhelo que existe en la mayoría de las personas de encontrar un amor transparente, sincero, al cual se le pueda abrir el corazón y darle lo mejor de sí mismo, con romanticismo y cariño, todo esto envuelto en una melodía pegajosa, alegre y caribeña.</p></br>
+        <p>Por último, échenle un vistazo a la sesión fotográfica para éste trabajo. Sigue deslizando!</p>
+    </section></br>
         
     </section>
     <section class="photos">
@@ -67,7 +68,7 @@
     <article>
         <hr class="divider">
         <div class="footer_info">
-            <p class="copy">Andres Mejia Music</p> <p> Powered by Shibui Devs</p>
+            <p class="copy">Andres Mejia Music. All Rights Reserved ®.</p> <p> Powered by Shibui Devs</p>
         </div>
     </article>
 
