--- a/Music/music.html
+++ b/Music/music.html
@@ -65,7 +65,7 @@
         </article>
         <hr class="divider">
         <div class="footer_info">
-            <p class="copy">Andres Mejia Music </p> <p> Powered by Shibui Devs</p>
+            <p class="copy">Andres Mejia Music. All Rights Reserved ®. </p> <p> Powered by Shibui Devs</p>
         </div>
     </section>
 
