--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a href=""><i class="fa-brands fa-spotify"></i></a>
             </footer>
             <hr class="divider">
-            <span>Andres Mejia Music &copy; </span><span>  Powered by Shibui Devs </span>
+            <span>Andres Mejia Music. All Rights Reserved ®.&copy; </span><span>  Powered by Shibui Devs </span>
         </article>
         <article class="art-2">
             <img src="./img/DSC_0478-min.png" alt="andres">
