--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
                 <a href=""><i class="fa-brands fa-spotify"></i></a>
             </footer>
             <hr class="divider">
-            <span>Andres Mejia Music. All Rights Reserved ®.&copy; </span><span>  Powered by Shibui Devs </span>
+            <div class="Information"><span>Andres Mejia Music. All Rights Reserved ®.&copy; </span><span>  Powered by Shibui Devs </span></div>
         </article>
         <article class="art-2">
-            <img src="./img/DSC_0478-min.png" alt="andres">
+            <img src="./img/DSC_0428_copia-min.png" alt="andres">
+            <img src="./img/beach.gif" alt="beach">
         </article>
 
     </section>
